[package]
name = "zeta-bot-rs"
version = "0.1.0"
authors = ["Daniel Shoun <danielshoun+servicesgithub@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
dotenv = "0.15.0"
markov = "1.1.0"
rand = "0.7.3"
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
